...
    }
}

class HeaderView: UIView {
    
    @IBOutlet weak var searchView: UIView!
    @IBOutlet weak var searchTextField: UITextField!
    @IBOutlet weak var textConstraint: NSLayoutConstraint!
    @IBOutlet weak var dataLabel: UILabel!
    
    public var delegate: HeaderViewDelegate!
    
    public let closedConstraint: CGFloat = 0
...
