...
    }

    override func awakeFromNib() {
        super.awakeFromNib()
        
        setupCell()
        imageView.accessibilityIdentifier = "cellImage"
    }
    
    override func prepareForReuse() {
        super.prepareForReuse()
        
        // Reset cell if necessary
...
