...
                            </collectionView>
                        </subviews>
                        <color key="backgroundColor" red="0.2156862745" green="0.2156862745" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="collectionView" destination="620-f8-KYp" id="aRJ-fP-IfZ"/>
                        <outlet property="dataLabel" destination="mqc-HE-hzv" id="htW-pS-jez"/>
                        <segue destination="aeu-7o-VAz" kind="presentation" identifier="segueImageVC" modalTransitionStyle="coverVertical" id="gLc-uy-y1M"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
